k8s/ace-rp/kustomize/ace-rp/overlays/local/ace-rp/ucis/add-ca.yml
# 
# Copyright SecureKey Technologies Inc. All Rights Reserved. 
# 
# SPDX-License-Identifier: Apache-2.0 
# 

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ucis-ace-rp
spec:
  template:
    spec:
      volumes:
        - name: ca-cert
          configMap:
            name: demo-ca-cert
      containers:
        - name: ace-rp
          volumeMounts:
            - name: ca-cert
              mountPath: /etc/ace-rp/tls
